location overflow on large data entry css fix

--- a/client/app/styles/events.css
+++ b/client/app/styles/events.css
@@ -50,3 +50,8 @@
 .event-header{
     display: inline;
 }
+
+.locations{
+    word-break: break-all;
+    height: auto;
+}
